--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Raleway:wght@400;500&display=swap");
 .bg-gradient-chill {
   background: linear-gradient(135deg, #94aaab 0%, #0291e3 100%);
 }
@@ -30,29 +30,28 @@ body {
 
 h1 {
   line-height: 27pt;
-  color: #2c4465;
-  font-size: 2rem;
+  color: #8c3921;
+  font-size: 1.5rem;
   font-weight: 500;
-  font-variant-caps: all-petite-caps;
-  letter-spacing: 0.3rem;
-  text-align: center;
+  letter-spacing: 0.07rem;
+  font-family: "Raleway", sans-serif;
 }
 
 h2 {
   line-height: 27pt;
-  color: #2c4465;
+  color: #8c3921;
   font-size: 1.7rem;
   font-weight: 500;
   font-variant-caps: all-petite-caps;
   letter-spacing: 0.3rem;
-  text-align: center;
 }
 
 p {
-  font-family: "Poppins";
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
+  font-weight: 500;
   line-height: 30px;
-  letter-spacing: 1px;
+  letter-spacing: 1.7px;
 }
 
 a {
@@ -141,8 +140,8 @@ header nav #click {
 }
 
 .nav-container {
-  background: #2c4465;
-  height: 57px;
+  background: #fff8bd;
+  height: 45px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -154,18 +153,18 @@ header nav #click {
           justify-content: flex-start;
 }
 
+.nav-container header {
+  width: 100%;
+}
+
 .nav-container header .logo {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-height: 37px;
-}
-
-.nav-container header .logo .logo-placeholder {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 0.7em;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-height: 45px;
 }
 
 .nav-container header .logo .logo-placeholder .company-logo {
@@ -180,22 +179,6 @@ header nav #click {
 }
 
 .nav-container header .logo .logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: 10px;
-  margin-bottom: 5px;
-}
-
-.nav-container header .logo .logo-container .logo-name {
-  color: #ffffff;
-  line-height: 26px;
-  letter-spacing: 4pt;
-  font-size: 1.3rem;
-  font-variant-caps: all-petite-caps;
-}
-
-.nav-container header .logo .logo-container .logo-title {
   display: none;
 }
 
@@ -243,7 +226,7 @@ header nav #click {
 }
 
 .nav-container header nav ul li a {
-  color: #ffffff;
+  color: #fff8bd;
   width: 100%;
   margin-left: -100%;
 }
@@ -271,132 +254,68 @@ header #click:checked ~ ul li a {
   height: auto;
   position: absolute;
   right: 10px;
-  top: 12px;
+  top: 8px;
 }
 
 .menu-btn svg path {
-  fill: #ffffff;
+  fill: #8c3921;
+}
+
+.small-donation-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 1em;
+  border: 1px solid #8c3921;
+  border-radius: 2px;
+}
+
+.small-donation-section .primary-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 40px;
+  width: 100%;
+  padding: 20px 150px;
+  margin-top: 0;
+  margin-bottom: 1em;
+  font-family: "Raleway";
+  font-size: 14px;
+  font-weight: 900;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: #8c3921;
+  border: 1px solid #8c3921;
+  border-radius: 5px;
+  background: #fff8bd;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
+
+.small-donation-section .primary-button:hover {
+  background-color: #d3cd94;
 }
 
 .hero-container {
-  padding: 1em;
-}
-
-.hero-container .hero-title {
-  font-family: "Poppins";
-  font-weight: 300;
-  font-size: 1.3rem;
-  color: black;
-  line-height: 2rem;
-}
-
-.hero-container .hero-subtitle {
-  color: black;
-}
-
-.hero-container .hero-button-container {
-  margin: 2em 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  max-height: 50px;
-}
-
-.hero-container .hero-button-container .primary-button {
-  background-color: #2c4465;
-  width: 100%;
-  height: 40px;
-  color: #ffffff;
-  font-size: 20px;
-  font-variant-caps: all-petite-caps;
-  letter-spacing: 1pt;
-  border-radius: 5px;
-  border: 1px solid #2c4465;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-.hero-container .hero-button-container .primary-button:hover {
-  background: #2c4465;
-  color: #ffffff;
-  border-color: #2c4465;
-}
-
-.hero-container .hero-button-container .secondary-button {
-  background-color: #ffffff;
-  width: 100%;
-  height: 40px;
-  color: #2c4465;
-  font-size: 20px;
-  font-variant-caps: all-petite-caps;
-  letter-spacing: 1pt;
-  border-radius: 5px;
-  border: 1px solid #2c4465;
-  border-radius: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  margin-top: 1em;
-}
-
-.hero-container .hero-button-container .secondary-button:hover {
-  background-color: #2c4465;
-  color: #ffffff;
-  border-color: #2c4465;
-}
-
-.hero-container .col {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-bottom: 2em;
-  margin-bottom: 2em;
-}
-
-.hero-container .col .hero-index-vector {
-  width: 400px;
-  height: auto;
+  background-image: url(/img/hero-image.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 30vh;
 }
 
 .hero-content-grid {
@@ -409,52 +328,6 @@ header #click:checked ~ ul li a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.mobile-social-icon {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.mobile-social-icon a {
-  border: 1px solid #2c4465;
-  border-radius: 50%;
-  padding: 10px;
-  padding-bottom: 0;
-  margin: 0.7rem;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-.mobile-social-icon a:hover {
-  background-image: radial-gradient(#fff 0%, #2c446585 100%);
-}
-
-.featured {
-  position: relative;
-  margin-top: 2em;
-  padding: 17px;
-}
-
-.featured:before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background: #63cb9e85;
-  top: -10px;
-  left: -5px;
-  z-index: -1;
-  opacity: 0.5;
 }
 
 .featured {
@@ -483,14 +356,14 @@ header #click:checked ~ ul li a {
 
 .featured .left .inner .featured-title h2 {
   line-height: 27pt;
-  color: #2c4465;
+  color: #8c3921;
   font-size: 1.7rem;
   font-weight: 500;
   font-variant-caps: all-petite-caps;
   letter-spacing: 0.3rem;
 }
 
-.featured .right {
+.featured .left .inner .featured-desc {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -498,60 +371,19 @@ header #click:checked ~ ul li a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  width: 100%;
 }
 
-.featured .right img {
-  border: 1px solid black;
-  border-radius: 5px;
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-.featured .right button {
-  background-color: #2c4465;
-  width: 100%;
-  padding: 8px;
-  color: #ffffff;
-  font-size: 17px;
-  border-radius: 5px;
-  border: 1px solid #2c4465;
-  margin: 1em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-  -webkit-box-shadow: 0 8px 13px -4px lightblue;
-          box-shadow: 0 8px 13px -4px lightblue;
-}
-
-.featured .right button:hover {
-  background: #618bc5;
-  color: #ffffff;
-  border-color: #2c4465;
-  -webkit-box-shadow: 0 8px 13px -4px #0d4252c4;
-          box-shadow: 0 8px 13px -4px #0d4252c4;
-}
-
-.featured .right a {
-  color: #ffffff;
-  font-size: 1em;
-  text-transform: uppercase;
-  letter-spacing: 2pt;
-  font-weight: 600;
+.featured .left .inner .featured-desc span.signature {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  text-align: right;
+  font-style: italic;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 1.7px;
 }
 
 .skills {
@@ -586,7 +418,7 @@ header #click:checked ~ ul li a {
 }
 
 .skills .skills-container ul li .skill-title {
-  color: #2c4465;
+  color: #8c3921;
   font-size: 1.7rem;
   font-weight: 500;
   font-variant-caps: all-petite-caps;
@@ -639,7 +471,7 @@ header #click:checked ~ ul li a {
 
 .portfolio .portfolio-left .inner .subtitle {
   line-height: 27pt;
-  color: #2c4465;
+  color: #8c3921;
   font-size: 1.7rem;
   font-weight: 500;
   font-variant-caps: all-petite-caps;
@@ -677,13 +509,13 @@ header #click:checked ~ ul li a {
 }
 
 .portfolio .right .case-study-button {
-  background-color: #2c4465;
+  background-color: #8c3921;
   width: 100%;
   padding: 8px;
-  color: #ffffff;
+  color: #fff8bd;
   font-size: 17px;
   border-radius: 5px;
-  border: 1px solid #2c4465;
+  border: 1px solid #8c3921;
   margin: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -702,14 +534,14 @@ header #click:checked ~ ul li a {
 
 .portfolio .right .case-study-button:hover {
   background: #618bc5;
-  color: #ffffff;
-  border-color: #2c4465;
+  color: #fff8bd;
+  border-color: #8c3921;
   -webkit-box-shadow: 0 8px 13px -4px #0d4252c4;
           box-shadow: 0 8px 13px -4px #0d4252c4;
 }
 
 .portfolio .right .case-study-button .primary-button {
-  color: #ffffff;
+  color: #fff8bd;
   font-size: 1em;
   text-transform: uppercase;
   letter-spacing: 2pt;
@@ -896,16 +728,16 @@ header #click:checked ~ ul li a {
           justify-content: center;
   text-transform: uppercase;
   letter-spacing: 2px;
-  color: #ffffff;
+  color: #fff8bd;
   font-family: "Poppins";
   font-size: 16px;
-  background-color: #2c4465;
+  background-color: #fff8bd;
   cursor: pointer;
   width: 100%;
   height: 36px;
   margin-bottom: 2em;
   border-radius: 5px;
-  border: 1px solid #2c4465;
+  border: 1px solid #fff8bd;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   -webkit-box-shadow: 0 8px 13px -4px #252525;
@@ -913,9 +745,9 @@ header #click:checked ~ ul li a {
 }
 
 .contact-page-section .contact-container .contact-form-container .input-area .submit-button:hover {
-  background: #ffffff;
-  color: #2c4465;
-  border-color: #2c4465;
+  background: #fff8bd;
+  color: #fff8bd;
+  border-color: #fff8bd;
 }
 
 .contact-page-section .contact-container .contact-form-container .input-area span {
@@ -1040,7 +872,7 @@ label
 }
 
 .show-modal .contact-modal-title {
-  color: #2c4465;
+  color: #fff8bd;
   line-height: 26px;
   letter-spacing: 4pt;
   font-size: 1.5rem;
@@ -1116,7 +948,7 @@ label
 
 .show-modal ul li a span {
   font-weight: 300;
-  color: #2c4465;
+  color: #fff8bd;
   text-decoration: underline;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
@@ -1154,9 +986,9 @@ label
 }
 
 .thank-you-section .thank-you-container .thank-you-message {
-  border: 1px solid #2c4465;
+  border: 1px solid #fff8bd;
   border-radius: 8px;
-  background-color: #ffffff;
+  background-color: #fff8bd;
   padding: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1177,7 +1009,7 @@ label
 
 .thank-you-section .thank-you-container .thank-you-message h1 {
   line-height: 27pt;
-  color: #2c4465;
+  color: #fff8bd;
   font-size: 1.7rem;
   font-weight: 500;
   font-variant-caps: all-petite-caps;
@@ -1202,12 +1034,12 @@ label
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background-color: #2c4465;
-  color: #ffffff;
+  background-color: #fff8bd;
+  color: #fff8bd;
   font-size: 17px;
   text-transform: uppercase;
   font-weight: 500;
-  border: 1px solid #2c4465;
+  border: 1px solid #fff8bd;
   border-radius: 5px;
   margin: 1em;
   width: 100%;
@@ -1219,11 +1051,11 @@ label
 }
 
 .thank-you-section .thank-you-container .thank-you-message button .primary-button {
-  background-color: #2c4465;
-  color: #ffffff;
+  background-color: #8c3921;
+  color: #fff8bd;
   font-size: 17px;
   border-radius: 5px;
-  border: 1px solid #2c4465;
+  border: 1px solid #8c3921;
   margin-right: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1239,9 +1071,9 @@ label
 }
 
 .thank-you-section .thank-you-container .thank-you-message button .primary-button:hover {
-  background: #2c4465;
-  color: #ffffff;
-  border-color: #2c4465;
+  background: #8c3921;
+  color: #fff8bd;
+  border-color: #8c3921;
 }
 
 @-webkit-keyframes thank-you-animation {
@@ -1278,8 +1110,8 @@ footer .footer-container {
 }
 
 footer .footer-container .footer-details {
-  background: #2c4465;
-  color: #ffffff;
+  background: #8c3921;
+  color: #fff8bd;
   text-align: left;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1332,14 +1164,14 @@ footer .footer-container .footer-details .footer-top-bar .logo .logo-placeholder
 
 footer .footer-container .footer-details .footer-top-bar .logo .logo-name {
   font-size: 22px;
-  color: #ffffff;
+  color: #fff8bd;
   line-height: 11px;
   font-variant-caps: all-petite-caps;
   letter-spacing: 5pt;
 }
 
 footer .footer-container .footer-details .footer-top-bar .logo .logo-title {
-  color: #ffffff;
+  color: #fff8bd;
   font-variant-caps: all-petite-caps;
   letter-spacing: 1.6pt;
 }
@@ -1362,10 +1194,10 @@ footer .footer-container .footer-details .logo-container {
 }
 
 footer .footer-container .footer-details .logo-container .mailto-link {
-  color: #ffffff;
+  color: #fff8bd;
   text-decoration: underline;
-  -webkit-text-decoration-color: #ffffff;
-          text-decoration-color: #ffffff;
+  -webkit-text-decoration-color: #fff8bd;
+          text-decoration-color: #fff8bd;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   margin-top: 20px;
@@ -1646,7 +1478,7 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
-    color: #ffffff;
+    color: #fff8bd;
     font-size: 0.8rem;
     letter-spacing: 4.5pt;
     margin-left: 20px;
@@ -1909,7 +1741,7 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
     padding: 3em 4em;
   }
   .featured .left .inner p .primary-button {
-    color: #2c4465;
+    color: #8c3921;
     font-weight: 500;
     text-decoration: underline;
     -webkit-transition: all 0.5s ease-in-out;
@@ -2106,7 +1938,7 @@ footer .footer-container .footer-details .logo-container .mailto-link:hover {
         -ms-flex-align: center;
             align-items: center;
     height: 60px;
-    background: #2c4465;
+    background: #fff8bd;
   }
   .nav-container header .logo {
     padding-left: 2.5em;
