--- a/style.scss
+++ b/style.scss
@@ -1,19 +1,20 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Raleway:wght@400;500&display=swap");
 // color variables
-$core-light: #ffffff;
+$core-dark: #8c3921;
+$core-light: #fff8bd;
+$core-light_hover-state: #d3cd94;
 $core-disabled: lightgrey;
-$brand-color: #2c4465;
+$brand-color: $core-light;
 $tertiary: #213550;
 $success: #006500;
 $fail: #ad0021;
 
 // buttons
-$primary-core: $brand-color;
+$primary-core: $core-dark;
 $secondary-core: $core-light;
 $tertiary-core: $tertiary;
-$core-button-border: $brand-color;
-$button-border-settings: 1px solid $brand-color;
+$core-button-border: $primary-core;
+$button-border-settings: 1px solid $primary-core;
 $button-hover-state: all 0.5s ease-in-out;
 
 //
@@ -56,29 +57,28 @@ body {
 
 h1 {
   line-height: 27pt;
-  color: $brand-color;
-  font-size: 2rem;
+  color: $core-dark;
+  font-size: 1.5rem;
   font-weight: 500;
-  font-variant-caps: all-petite-caps;
-  letter-spacing: 0.3rem;
-  text-align: center;
+  letter-spacing: 0.07rem;
+  font-family: "Raleway", sans-serif;
 }
 
 h2 {
   line-height: 27pt;
-  color: $brand-color;
+  color: $core-dark;
   font-size: 1.7rem;
   font-weight: 500;
   font-variant-caps: all-petite-caps;
   letter-spacing: 0.3rem;
-  text-align: center;
 }
 
 p {
-  font-family: "Poppins";
+  font-family: "Raleway", sans-serif;
   font-size: 16px;
+  font-weight: 500;
   line-height: 30px;
-  letter-spacing: 1px;
+  letter-spacing: 1.7px;
 }
 
 a {
@@ -131,27 +131,27 @@ header nav #click {
     ul {
       margin-bottom: 1em;
     }
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 1em;
-      margin-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+    margin-top: 0;
   }
 }
 
 .nav-container {
   background: $brand-color;
-  height: 57px;
+  height: 45px;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   header {
+    width: 100%;
     .logo {
       display: flex;
-      max-height: 37px;
+      justify-content: center;
+      max-height: 45px;
       .logo-placeholder {
-        display: flex;
-        margin-left: 0.7em;
         .company-logo {
           display: flex;
           img {
@@ -161,23 +161,12 @@ header nav #click {
         }
       }
       .logo-container {
-        display: flex;
-        margin-left: 10px;
-        margin-bottom: 5px;
-        .logo-name {
-          color: $core-light;
-          line-height: 26px;
-          letter-spacing: 4pt;
-          font-size: 1.3rem;
-          font-variant-caps: all-petite-caps;
-        }
-        .logo-title {
-          display: none;
-        }
+        display: none;
       }
     }
   }
 }
+
 .nav-container header nav ul {
   position: absolute;
   top: 55px;
@@ -229,132 +218,57 @@ header #click:checked ~ ul li a {
     height: auto;
     position: absolute;
     right: 10px;
-    top: 12px;
+    top: 8px;
     path {
-      fill: $core-light;
+      fill: $core-dark;
+    }
+  }
+}
+
+.small-donation-section {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  border: 1px solid $core-dark;
+  border-radius: 2px;
+  .primary-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 100%;
+    padding: 20px 150px;
+    margin-top: 0;
+    margin-bottom: 1em;
+    font-family: "Raleway";
+    font-size: 14px;
+    font-weight: 900;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: $core-dark;
+    border: $button-border-settings;
+    border-radius: 5px;
+    background: $core-light;
+    transition: all 1s ease-in-out;
+    &:hover {
+      background-color: $core-light_hover-state;
     }
   }
 }
 
 .hero-container {
-  padding: 1em;
-  .hero-title {
-    font-family: "Poppins";
-    font-weight: 300;
-    font-size: 1.3rem;
-    color: black;
-    line-height: 2rem;
-  }
-  .hero-subtitle {
-    color: black;
-  }
-  .hero-button-container {
-    margin: 2em 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    max-height: 50px;
-    .primary-button {
-      background-color: $primary-core;
-      width: 100%;
-      height: 40px;
-      color: $core-light;
-      font-size: 20px;
-      font-variant-caps: all-petite-caps;
-      letter-spacing: 1pt;
-      border-radius: 5px;
-      border: $button-border-settings;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: $button-hover-state;
-      &:hover {
-        background: $primary-core;
-        color: $core-light;
-        border-color: $core-button-border;
-      }
-    }
-    .secondary-button {
-      background-color: $core-light;
-      width: 100%;
-      height: 40px;
-      color: $brand-color;
-      font-size: 20px;
-      font-variant-caps: all-petite-caps;
-      letter-spacing: 1pt;
-      border-radius: 5px;
-      border: $button-border-settings;
-      border-radius: 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      transition: $button-hover-state;
-      margin-top: 1em;
-      &:hover {
-        background-color: $brand-color;
-        color: $core-light;
-        border-color: $brand-color;
-      }
-    }
-  }
-  .col {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 2em;
-    margin-bottom: 2em;
-    .hero-index-vector {
-      width: 400px;
-      height: auto;
-    }
-  }
+  background-image: url(/img/hero-image.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 30vh;
 }
 
 .hero-content-grid {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.mobile-social-icon {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  a {
-    border: $button-border-settings;
-    border-radius: 50%;
-    padding: 10px;
-    padding-bottom: 0;
-    margin: 0.7rem;
-    transition: $button-hover-state;
-    &:hover {
-      background-image: radial-gradient(#fff 0%, #2c446585 100%);
-    }
-  }
-}
-
-
-
-.featured {
-  position: relative;
-  margin-top: 2em;
-  padding: 17px;
-}
-
-.featured:before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background: #63cb9e85;
-  top: -10px;
-  left: -5px;
-  z-index: -1;
-  opacity: 0.5;
 }
 
 .featured {
@@ -380,47 +294,20 @@ header #click:checked ~ ul li a {
         font-variant-caps: all-petite-caps;
         letter-spacing: 0.3rem;
       }
-    }
-  }
-  .right {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    img {
-      border: 1px solid black;
-      border-radius: 5px;
-      margin-top: 0;
-      margin-bottom: 10px;
-    }
-    button {
-      background-color: $primary-core;
-      width: 100%;
-      padding: 8px;
-      color: $core-light;
-      font-size: 17px;
-      border-radius: 5px;
-      border: $button-border-settings;
-      margin: 1em;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: $button-hover-state;
-      box-shadow: 0 8px 13px -4px lightblue;
-      &:hover {
-        background: #618bc5;
-        color: $core-light;
-        border-color: $core-button-border;
-        box-shadow: 0 8px 13px -4px #0d4252c4;
+      .featured-desc {
+        display: flex;
+        flex-direction: column;
+        span.signature {
+          justify-content: flex-end;
+          text-align: right;
+          font-style: italic;
+          font-family: "Raleway", sans-serif;
+          font-size: 16px;
+          font-weight: 500;
+          line-height: 30px;
+          letter-spacing: 1.7px;
+        }
       }
-    }
-    a {
-      color: $core-light;
-      font-size: 1em;
-      text-transform: uppercase;
-      letter-spacing: 2pt;
-      font-weight: 600;
     }
   }
 }
@@ -910,8 +797,6 @@ header #click:checked ~ ul li a {
   }
 }
 
-
-
 // Global Footer styles
 
 footer {
@@ -1006,8 +891,6 @@ footer {
     max-width: 365px;
     width: 100%;
   }
-
-  
 }
 
 // Large mobile Phone Viewport styles
@@ -1427,7 +1310,6 @@ footer {
       }
     }
   }
-
 }
 
 //Styles for Laptops
@@ -1668,7 +1550,7 @@ footer {
       align-items: center;
     }
   }
- 
+
   footer .footer-container .footer-details {
     padding: 4em;
   }
@@ -1963,7 +1845,6 @@ footer {
     }
   }
 
-
   section {
     padding: 1em 9em;
   }
@@ -2131,5 +2012,4 @@ footer {
   footer .footer-container .footer-details {
     padding: 5em 18em;
   }
-
 }
